[gd_scene load_steps=11 format=2]

[ext_resource path="res://Client/UI/Icons/icon_initiative_big.png" type="Texture" id=1]
[ext_resource path="res://Client/UI/Icons/icon_movement_big.png" type="Texture" id=2]
[ext_resource path="res://Client/UI/Components/InfoDisplay/InfoDisplay.gd" type="Script" id=3]
[ext_resource path="res://Client/UI/Icons/icon_ranged_attack.png" type="Texture" id=4]
[ext_resource path="res://Client/UI/Icons/icon_ranged_armour_big.png" type="Texture" id=5]
[ext_resource path="res://Client/UI/Theme.tres" type="Theme" id=6]
[ext_resource path="res://Client/UI/Icons/icon_shields_big.png" type="Texture" id=7]
[ext_resource path="res://Client/UI/Icons/icon_melee_armour_big.png" type="Texture" id=8]
[ext_resource path="res://Client/UI/Components/AttackTypeBox/AttackTypeBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://Client/UI/Components/StatBlock/StatBlock.tscn" type="PackedScene" id=12]

[node name="InfoDisplay" type="MarginContainer"]
margin_top = 22.0
margin_right = 63.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 1
custom_constants/margin_top = -1
custom_constants/margin_left = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = -1.0
margin_right = 107.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="TopPart" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 106.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1

[node name="LeftSide" type="MarginContainer" parent="VBoxContainer/TopPart"]
margin_right = 95.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="Rows" type="VBoxContainer" parent="VBoxContainer/TopPart/LeftSide"]
margin_right = 95.0
margin_bottom = 31.0
custom_constants/separation = 0

[node name="Top" type="HBoxContainer" parent="VBoxContainer/TopPart/LeftSide/Rows"]
margin_right = 95.0
margin_bottom = 8.0
custom_constants/separation = 0

[node name="Health" parent="VBoxContainer/TopPart/LeftSide/Rows/Top" instance=ExtResource( 12 )]
rect_min_size = Vector2( 25, 8 )
current_value = 99.0
max_value = 99
show_current_value = true

[node name="Shields" parent="VBoxContainer/TopPart/LeftSide/Rows/Top" instance=ExtResource( 12 )]
visible = false
margin_left = 25.0
margin_right = 50.0
rect_min_size = Vector2( 25, 8 )
icon = ExtResource( 7 )
current_value = 99.0
max_value = 99
show_current_value = true

[node name="Middle" type="HBoxContainer" parent="VBoxContainer/TopPart/LeftSide/Rows"]
margin_top = 8.0
margin_right = 95.0
margin_bottom = 8.0
custom_constants/separation = 0

[node name="Movement" parent="VBoxContainer/TopPart/LeftSide/Rows/Middle" instance=ExtResource( 12 )]
visible = false
rect_min_size = Vector2( 25, 8 )
icon = ExtResource( 2 )

[node name="Initiative" parent="VBoxContainer/TopPart/LeftSide/Rows/Middle" instance=ExtResource( 12 )]
visible = false
rect_min_size = Vector2( 25, 8 )
icon = ExtResource( 1 )

[node name="Bottom" type="HBoxContainer" parent="VBoxContainer/TopPart/LeftSide/Rows"]
margin_top = 8.0
margin_right = 95.0
margin_bottom = 16.0
custom_constants/separation = 0

[node name="MeleeArmour" parent="VBoxContainer/TopPart/LeftSide/Rows/Bottom" instance=ExtResource( 12 )]
rect_min_size = Vector2( 25, 8 )
icon = ExtResource( 8 )

[node name="RangedArmour" parent="VBoxContainer/TopPart/LeftSide/Rows/Bottom" instance=ExtResource( 12 )]
margin_left = 25.0
margin_right = 50.0
rect_min_size = Vector2( 25, 8 )
icon = ExtResource( 5 )

[node name="RightSide" type="MarginContainer" parent="VBoxContainer/TopPart"]
margin_left = 96.0
margin_right = 106.0
margin_bottom = 31.0

[node name="Attacks" type="VBoxContainer" parent="VBoxContainer/TopPart/RightSide"]
margin_right = 10.0
margin_bottom = 31.0
custom_constants/separation = 1

[node name="Melee" parent="VBoxContainer/TopPart/RightSide/Attacks" instance=ExtResource( 11 )]
margin_bottom = 11.0

[node name="Ranged" parent="VBoxContainer/TopPart/RightSide/Attacks" instance=ExtResource( 11 )]
margin_top = 12.0
margin_bottom = 23.0
icon = ExtResource( 4 )

[node name="EntityTypes" type="MarginContainer" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 106.0
margin_bottom = 41.0
custom_constants/margin_bottom = 2

[node name="Types" type="Label" parent="VBoxContainer/EntityTypes"]
margin_right = 106.0
margin_bottom = 6.0
rect_min_size = Vector2( 3, 5 )
size_flags_horizontal = 3
theme = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 0
text = "Light - Biological"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
